--- a/index.html
+++ b/index.html
@@ -7,29 +7,31 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500;9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet" />
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <section class="content">
-      <img class="content--mobile" src="./images/image-product-mobile.jpg" />
-      <p class="content--perfume">Perfume</p>
-      <h1 class="content--name">Gabrielle Essence Eau De Parfum</h1>
-      <p class="content--description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
-      <div class="content--price">
-        <h2 class="content--discountPrice">$149.99</h2>
-        <p class="content--originalPrice">$169.99</p>
+    <main class="main">
+      <div class="image">
+        <img class="image--mobile" src="./images/image-product-mobile.jpg" />
+        <img class="image--desktop" src="./images/image-product-desktop.jpg" />
       </div>
-      <button class="content--button"><img src="./images/icon-cart.svg" /> Add to Cart</button>
-    </section>
+      <div class="content">
+        <p class="content--perfume">Perfume</p>
+        <h1 class="content--name">Gabrielle Essence Eau De Parfum</h1>
+        <p class="content--description">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
+        <div class="content--price">
+          <h2 class="content--discountPrice">$149.99</h2>
+          <p class="content--originalPrice">$169.99</p>
+        </div>
+        <button class="content--button"><img src="./images/icon-cart.svg" /> Add to Cart</button>
+      </div>
+    </main>
     <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by Katarzyna Fronc</a>.
-    </div>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by Katarzyna Fronc</a>
+      </div> 
   </body>
 </html>
